<resources>
    <string name="app_name">TeleHealth Manager Patient</string>
    <string name="welcome_login">Login</string>
    <string name="sample_address">Opposite to Khalifa Stadium, AL Waab Street</string>
    <string name="sample_phone">PH : 44111105</string>
    <string name="sample_name">Platinum Dental center</string>
    <string name="sample_specification">Cosmetic, Dental Centers</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_online_consultation">Online Consultations</string>
    <string name="menu_fav_doctor">Favourite Doctor</string>
    <string name="menu_medical_records">Medical Records</string>
    <string name="menu_remainder">Remainder</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_relative_mgmt">Relatives Management</string>
    <string name="menu_faq">FAQ/Admin Contact</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_search">Search for doctor,category</string>
    <string name="title_activity_chat">Chat</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="invalid_otp">invalid OTP</string>
    <string name="we_just_otp">"We just send 4 digit code to "</string>
    <string name="terms_content">By using the app you agree to</string>
    <string name="terms">terms</string>
    <string name="login_using_mail"><u>Login using email</u></string>
    <string name="profile_completed">Profile Completed:  </string>
    <string name="profile">Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_passwword">New Password</string>
    <string name="re_password">Re-Enter the New Password</string>
    <string name="find_doctors">Find Doctors</string>
    <string name="chat">Chat</string>
    <string name="search_doctor">Search Doctors</string>
    <string name="visted_doctor">Visited Doctors</string>
    <string name="specialities">Specialities</string>
    <string name="ask_question">Ask question on helath related</string>
    <string name="based_hospitals">Based on hospitals</string>
    <string name="see_you_visted_doc">See your visited doctors</string>
    <string name="result_found">( %s results found )</string>
    <string name="appointments_details">Appointment Details</string>
    <string name="search_result">Search results for %s</string>
    <string name="years_of_exp"> yrs of overall exp</string>
    <string name="_years_of_exp">%s yrs of overall exp</string>
    <string name="_consultation_fee">Consultation fee: %s</string>
    <string name="booking">Booking</string>
    <string name="enter_patient_details">Enter patient detail</string>
    <string name="avaliable_today">Available Today</string>
    <string name="avaliable_tomorrow">Available Tomorrow</string>
    <string name="filter">Filter</string>
    <string name="avaliablity">Availablity</string>
    <string name="avaliablity_anyday">available anyday</string>
    <string name="avaliablity_today">available today</string>
    <string name="avaliablity_in_next3">available in next 3 days</string>
    <string name="avaliablity_coming_week">available coming weekend</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="consultationfee">Consultation fee</string>
    <string name="_1to">1 -\ 20</string>
    <string name="_20to">20 -\ 30</string>
    <string name="_30to"> 30 above</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="doctor">Doctor</string>
    <string name="Specialities">Specialities</string>
    <string name="clinic">Clinic</string>
    <string name="error_invalid_name">Please enter Name </string>
    <string name="error_invalid_first_name">Please enter first Name </string>
    <string name="error_invalid__last_name">Please enter last Name </string>
    <string name="error_invalid_email_address">Please enter valid email address</string>
    <string name="error_invalid_password">Please enter valid password</string>
    <string name="error_invalid_mobile">Please enter Mobile Number</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="error_invalid_gender">Please enter Gender</string>
    <string name="error_invalid_age">Please enter age</string>
    <string name="error_invalid_dob">Please enter DOB</string>
    <string name="error_invalid__blood_group">Please enter Blood Group</string>
    <string name="error_invalid__marital">Please enter Martial Status</string>
    <string name="error_invalid__height">Please enter Height</string>
    <string name="error_invalid__weight">Please enter Weight</string>
    <string name="error_invalid_mobile_">Please enter valid Emergency contact Number</string>
    <string name="error_invalid__allergies">Please enter Allergies</string>
    <string name="error_invalid__current_medications">Please enter Current Medications</string>
    <string name="error_invalid__past_medications">Please enter Past Medications</string>
    <string name="error_invalid__chronic_diseases">Please enter Chronic Diseases</string>
    <string name="error_invalid_injuries">Please enter Injuries</string>
    <string name="error_invalid_surgeries">Please enter Surgeries</string>
    <string name="error_invalid__smoking">Please select Smoking Habits</string>
    <string name="error_invalid__alcohol">Please select Alcohol Consumption</string>
    <string name="error_invalid__activity">Please enter Activity Level</string>
    <string name="error_invalid__food">Please enter Food Preference</string>
    <string name="error_invalid_occupation">Please enter Occupation</string>
    <string name="error_invalid_description">Please enter comments</string>
    <string name="show_reminder_notification">Show reminder notification</string>
    <string name="about_mi_dokter">About Teleheatlh</string>
    <string name="rate_us_on_play_store">Rate us on Play Store</string>
    <string name="view_amp_edit_profile"><![CDATA[View & Edit Profile >]]></string>
</resources>