<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.main.ui.faq.FaqFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.telehealthmanager.app.ui.activity.main.ui.settings.SettingViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/show_reminder_notification"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/colorLiteGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:text="@string/about_mi_dokter"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/colorLiteGrey"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:text="@string/rate_us_on_play_store"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/colorLiteGrey"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/colorGrey"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:gravity="center"
                android:background="@null"
                android:textColor="@color/Red"
                android:text="@string/menu_logout"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@color/colorGrey"/>
        </LinearLayout>

    </RelativeLayout>
</layout>